Feature: Implement user management with R2DBC and validation